unpackaged/main/default/objects/Contact/fields/AsklandMemorialScholarshipDonationLevels__c.field-meta.xml
<CustomField>
    <fullName>AsklandMemorialScholarshipDonationLevels__c</fullName>
    <label>AsklandMemorialScholarshipDonationLevels</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>500</fullName>
            </value>
            <value>
                <fullName>1000</fullName>
            </value>
            <value>
                <fullName>1500</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>