unpackaged/main/default/objects/Contact/fields/Date_Verified_by_Staff__c.field-meta.xml
<CustomField>
    <fullName>Date_Verified_by_Staff__c</fullName>
    <description>Date attorney admission was verified by staff (not date of admission necessarily, but date staff confirmed admission)</description>
    <inlineHelpText>Date attorney admission was verified by staff (not date of admission necessarily, but date staff confirmed admission)</inlineHelpText>
    <label>Date Verified by Staff</label>
    <type>Date</type>
</CustomField>