unpackaged/main/default/objects/Contact/fields/Do_you_require_any_accessibility_Accomod__c.field-meta.xml
<CustomField>
    <fullName>Do_you_require_any_accessibility_Accomod__c</fullName>
    <label>FON-Accessibility Accomodations</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>