unpackaged/main/default/objects/Contact/fields/FS_Accessibility__c.field-meta.xml
<CustomField>
    <fullName>FS_Accessibility__c</fullName>
    <label>Accessibility</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Wheelchair Access</fullName>
            </value>
            <value>
                <fullName>Service Animal</fullName>
            </value>
            <value>
                <fullName>Visual Impairment (please specify if you need large-print materials, assistance finding meeting room, etc.)</fullName>
            </value>
            <value>
                <fullName>Other (please specify)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>