unpackaged/main/default/objects/Contact/fields/FS_AccessibilityNotes__c.field-meta.xml
<CustomField>
    <fullName>FS_AccessibilityNotes__c</fullName>
    <inlineHelpText>Please note specific requests or other needs</inlineHelpText>
    <label>Accessibility Notes</label>
    <type>TextArea</type>
</CustomField>