unpackaged/main/default/objects/Contact/fields/FS_Active_Membership_Type__c.field-meta.xml
<CustomField>
    <fullName>FS_Active_Membership_Type__c</fullName>
    <label>Active Membership Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>