unpackaged/main/default/objects/Contact/fields/FS_Active_Subscription__c.field-meta.xml
<CustomField>
    <fullName>FS_Active_Subscription__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Active Subscription</label>
    <referenceTo>OrderApi__Subscription__c</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>