unpackaged/main/default/objects/Contact/fields/FS_Admitted_in_NYS__c.field-meta.xml
<CustomField>
    <fullName>FS_Admitted_in_NYS__c</fullName>
    <formula>IF(( TEXT(FS_NYS_Admission_Date__c)   &lt;&gt; "" ) ||  (FS_NYS_Attorney_Registration_Number__c  &lt;&gt; ""),true, false)</formula>
    <inlineHelpText>Formula field used for price rule for membership in-state prices</inlineHelpText>
    <label>Admitted in NYS</label>
    <type>Checkbox</type>
</CustomField>