unpackaged/main/default/objects/Contact/fields/FS_Admitted_Registration_Number__c.field-meta.xml
<CustomField>
    <fullName>FS_Admitted_Registration_Number__c</fullName>
    <label>Admitted Registration Number</label>
    <length>25</length>
    <type>Text</type>
</CustomField>