unpackaged/main/default/objects/Contact/fields/FS_Anonymize_Personal_Information__c.field-meta.xml
<CustomField>
    <fullName>FS_Anonymize_Personal_Information__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Anonymize Personal Information</label>
    <type>Checkbox</type>
</CustomField>