unpackaged/main/default/objects/Contact/fields/FS_API_Mailing_County__c.field-meta.xml
<CustomField>
    <fullName>FS_API_Mailing_County__c</fullName>
    <label>API Mailing County</label>
    <length>50</length>
    <type>Text</type>
</CustomField>