unpackaged/main/default/objects/Contact/fields/FS_Apsona_Primary_Affliation__c.field-meta.xml
<CustomField>
    <fullName>FS_Apsona_Primary_Affliation__c</fullName>
    <formula>FS_Primary_Affiliation__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Apsona Primary Affliation</label>
    <type>Text</type>
</CustomField>