unpackaged/main/default/objects/Contact/fields/FS_Attorney_Admission_Verified__c.field-meta.xml
<CustomField>
    <fullName>FS_Attorney_Admission_Verified__c</fullName>
    <label>Attorney Admission Verified</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>