unpackaged/main/default/objects/Contact/fields/FS_Bio__c.field-meta.xml
<CustomField>
    <fullName>FS_Bio__c</fullName>
    <inlineHelpText>Contact's Bio</inlineHelpText>
    <label>Bio</label>
    <type>TextArea</type>
</CustomField>