unpackaged/main/default/objects/Contact/fields/FS_Career_Center_Job_Opportunities__c.field-meta.xml
<CustomField>
    <fullName>FS_Career_Center_Job_Opportunities__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Category of bulk email messages related to NYSBA's Career Center</inlineHelpText>
    <label>Career Center Job Opportunities</label>
    <type>Checkbox</type>
</CustomField>