unpackaged/main/default/objects/Contact/fields/FS_CasePrepPlus__c.field-meta.xml
<CustomField>
    <fullName>FS_CasePrepPlus__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Category of bulk email messages that feature legal case summaries</inlineHelpText>
    <label>CasePrepPlus eNewsletter</label>
    <type>Checkbox</type>
</CustomField>