unpackaged/main/default/objects/Contact/fields/FS_CASL_OptIn__c.field-meta.xml
<CustomField>
    <fullName>FS_CASL_OptIn__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CASL Opt-In</label>
    <type>Checkbox</type>
</CustomField>