unpackaged/main/default/objects/Contact/fields/FS_CLE_Advertisement__c.field-meta.xml
<CustomField>
    <fullName>FS_CLE_Advertisement__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Category of bulk email messages related to NYSBA MCLE programs</inlineHelpText>
    <label>CLE Program Updates</label>
    <type>Checkbox</type>
</CustomField>