unpackaged/main/default/objects/Contact/fields/FS_Comp_Member__c.field-meta.xml
<CustomField>
    <fullName>FS_Comp_Member__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check if the individual is eligible for comp membership</inlineHelpText>
    <label>Comp Member</label>
    <type>Checkbox</type>
</CustomField>