unpackaged/main/default/objects/Contact/fields/FS_Contact_18C_ID__c.field-meta.xml
<CustomField>
    <fullName>FS_Contact_18C_ID__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <label>Contact 18C ID</label>
    <type>Text</type>
</CustomField>