unpackaged/main/default/objects/Contact/fields/FS_Contact_Member_Status__c.field-meta.xml
<CustomField>
    <fullName>FS_Contact_Member_Status__c</fullName>
    <formula>IF (ISBLANK(FS_Membership_Expiry_Date__c ), "",
IF(FS_Membership_Days_to_Expire__c   &gt; 0,'Active',
IF(FS_Membership_Days_to_Expire__c   &gt;= -90, 'Grace',
IF(FS_Membership_Days_to_Expire__c &lt; -90, 'Expired',
'Non-Member'
))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Member Status</label>
    <type>Text</type>
</CustomField>