unpackaged/main/default/objects/Contact/fields/FS_Country_Admitted__c.field-meta.xml
<CustomField>
    <fullName>FS_Country_Admitted__c</fullName>
    <description>The country you where first admitted, in any jurisdiction</description>
    <inlineHelpText>The country you where first admitted, in any jurisdiction</inlineHelpText>
    <label>Country Admitted</label>
    <length>40</length>
    <type>Text</type>
</CustomField>