unpackaged/main/default/objects/Contact/fields/FS_Court_Appearance_Capacity__c.field-meta.xml
<CustomField>
    <fullName>FS_Court_Appearance_Capacity__c</fullName>
    <label>Court Appearance Capacity (if applicable</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Civil Defense</fullName>
            </value>
            <value>
                <fullName>Civil Plaintiffs</fullName>
            </value>
            <value>
                <fullName>Criminal Defense</fullName>
            </value>
            <value>
                <fullName>Criminal Prosecution</fullName>
            </value>
            <value>
                <fullName>Judge</fullName>
            </value>
            <value>
                <fullName>Court Attorney</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>