unpackaged/main/default/objects/Contact/fields/FS_Court_Appearance_Frequency__c.field-meta.xml
<CustomField>
    <fullName>FS_Court_Appearance_Frequency__c</fullName>
    <label>Court Appearance Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Never</fullName>
            </value>
            <value>
                <fullName>Occasionally</fullName>
            </value>
            <value>
                <fullName>Frequently</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>