unpackaged/main/default/objects/Contact/fields/FS_Courts_Appearing_In_if_applicable__c.field-meta.xml
<CustomField>
    <fullName>FS_Courts_Appearing_In_if_applicable__c</fullName>
    <label>Courts Appearing In (if applicable)</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NYS: Civil - Appellate Division of the Supreme Court</fullName>
            </value>
            <value>
                <fullName>NYS: Civil - City Court</fullName>
            </value>
            <value>
                <fullName>NYS: Civil - County Court</fullName>
            </value>
            <value>
                <fullName>NYS: Civil - Court of Claims</fullName>
            </value>
            <value>
                <fullName>NYS: Civil - District Court</fullName>
            </value>
            <value>
                <fullName>NYS: Civil - Family Court</fullName>
            </value>
            <value>
                <fullName>NYS: Civil - Housing Court</fullName>
            </value>
            <value>
                <fullName>NYS: Civil - New York City Civil Court</fullName>
            </value>
            <value>
                <fullName>NYS: Civil - Small Claims</fullName>
            </value>
            <value>
                <fullName>NYS: Civil - Supreme Court</fullName>
            </value>
            <value>
                <fullName>NYS: Civil - Supreme Court - Commercial Division</fullName>
            </value>
            <value>
                <fullName>NYS: Civil - Surrogate's Court</fullName>
            </value>
            <value>
                <fullName>NYS: Civil - Town/Village Court</fullName>
            </value>
            <value>
                <fullName>NYS: Court of Appeals</fullName>
            </value>
            <value>
                <fullName>NYS: Criminal - City Court</fullName>
            </value>
            <value>
                <fullName>NYS: Criminal - County Court</fullName>
            </value>
            <value>
                <fullName>NYS: Criminal - District Court</fullName>
            </value>
            <value>
                <fullName>NYS: Criminal - Town/Village Court</fullName>
            </value>
            <value>
                <fullName>U.S. Federal: Bankruptcy Court</fullName>
            </value>
            <value>
                <fullName>U.S. Federal: Court of Appeals for the Armed Forces</fullName>
            </value>
            <value>
                <fullName>U.S. Federal: Court of Appeals for the Federal Circuit</fullName>
            </value>
            <value>
                <fullName>U.S. Federal: Court of Appeals for Veterans Claims</fullName>
            </value>
            <value>
                <fullName>U.S. Federal: Courts of Appeals - Circuit Court</fullName>
            </value>
            <value>
                <fullName>U.S. Federal: Immigration Court</fullName>
            </value>
            <value>
                <fullName>U.S. Federal: Supreme Court</fullName>
            </value>
            <value>
                <fullName>U.S. Federal: Tax Court</fullName>
            </value>
            <value>
                <fullName>Administrative Law Courts</fullName>
            </value>
            <value>
                <fullName>Foreign Courts (outside of U.S.)</fullName>
            </value>
            <value>
                <fullName>International Courts/Tribunals</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>