unpackaged/main/default/objects/Contact/fields/FS_Credits_Available__c.field-meta.xml
<CustomField>
    <fullName>FS_Credits_Available__c</fullName>
    <formula>FS_Credits_Gained__c  -  FS_Credits_Consumed__c  -  FS_Credits_Expired__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Credits Available</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>