unpackaged/main/default/objects/Contact/fields/FS_Credits_Consumed__c.field-meta.xml
<CustomField>
    <fullName>FS_Credits_Consumed__c</fullName>
    <label>Credits Consumed</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>