unpackaged/main/default/objects/Contact/fields/FS_Credits_Expired__c.field-meta.xml
<CustomField>
    <fullName>FS_Credits_Expired__c</fullName>
    <label>Credits Expired</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>