unpackaged/main/default/objects/Contact/fields/FS_Credits_Gained__c.field-meta.xml
<CustomField>
    <fullName>FS_Credits_Gained__c</fullName>
    <label>Credits Gained</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>