unpackaged/main/default/objects/Contact/fields/FS_Degree_Type__c.field-meta.xml
<CustomField>
    <fullName>FS_Degree_Type__c</fullName>
    <label>Degree Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>JD</fullName>
            </value>
            <value>
                <fullName>LLM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>