unpackaged/main/default/objects/Contact/fields/FS_Designation__c.field-meta.xml
<CustomField>
    <fullName>FS_Designation__c</fullName>
    <label>Designation</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Esq.</fullName>
            </value>
            <value>
                <fullName>J.D.</fullName>
            </value>
            <value>
                <fullName>Advocate</fullName>
            </value>
            <value>
                <fullName>Barrister</fullName>
            </value>
            <value>
                <fullName>Solicitor</fullName>
            </value>
            <value>
                <fullName>CPA</fullName>
            </value>
            <value>
                <fullName>D.D.S.</fullName>
            </value>
            <value>
                <fullName>LL.M.</fullName>
            </value>
            <value>
                <fullName>M.D.</fullName>
            </value>
            <value>
                <fullName>Ph.D.</fullName>
            </value>
            <value>
                <fullName>QC</fullName>
            </value>
            <value>
                <fullName>Ret.</fullName>
            </value>
            <value>
                <fullName>RN</fullName>
            </value>
            <value>
                <fullName>P.C.</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>