unpackaged/main/default/objects/Contact/fields/FS_DietaryInformation__c.field-meta.xml
<CustomField>
    <fullName>FS_DietaryInformation__c</fullName>
    <label>Dietary Information</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Allergy-Shellfish</fullName>
            </value>
            <value>
                <fullName>Allergy-Nuts</fullName>
            </value>
            <value>
                <fullName>Allergy-Peanuts Only</fullName>
            </value>
            <value>
                <fullName>Allergy-Other (please specify)</fullName>
            </value>
            <value>
                <fullName>Lactose Intolerant</fullName>
            </value>
            <value>
                <fullName>Gluten Free</fullName>
            </value>
            <value>
                <fullName>Vegetarian</fullName>
            </value>
            <value>
                <fullName>Vegan</fullName>
            </value>
            <value>
                <fullName>Pescatarian</fullName>
            </value>
            <value>
                <fullName>Other (please specify)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>