unpackaged/main/default/objects/Contact/fields/FS_DietaryInformationNotes__c.field-meta.xml
<CustomField>
    <fullName>FS_DietaryInformationNotes__c</fullName>
    <label>Dietary Information Notes</label>
    <type>TextArea</type>
</CustomField>