unpackaged/main/default/objects/Contact/fields/FS_Directory__c.field-meta.xml
<CustomField>
    <fullName>FS_Directory__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Directory</label>
    <type>Checkbox</type>
</CustomField>