unpackaged/main/default/objects/Contact/fields/FS_Directory_Address__c.field-meta.xml
<CustomField>
    <fullName>FS_Directory_Address__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Directory Address</label>
    <type>Checkbox</type>
</CustomField>