unpackaged/main/default/objects/Contact/fields/FS_Directory_Opt_In_Choice__c.field-meta.xml
<CustomField>
    <fullName>FS_Directory_Opt_In_Choice__c</fullName>
    <label>Directory Opt In Choice</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Work</fullName>
            </value>
            <value>
                <fullName>Home</fullName>
            </value>
            <value>
                <fullName>Show as Anonymous User</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>