unpackaged/main/default/objects/Contact/fields/FS_Do_Not_Contact__c.field-meta.xml
<CustomField>
    <fullName>FS_Do_Not_Contact__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Do Not Contact</label>
    <type>Checkbox</type>
</CustomField>