unpackaged/main/default/objects/Contact/fields/FS_Do_Not_Sync_with_HL__c.field-meta.xml
<CustomField>
    <fullName>FS_Do_Not_Sync_with_HL__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check if the contact should not be sync'd with HL</inlineHelpText>
    <label>Do Not Sync with HL</label>
    <type>Checkbox</type>
</CustomField>