unpackaged/main/default/objects/Contact/fields/FS_DoNotReleaseInfoto3rdPartyVendors__c.field-meta.xml
<CustomField>
    <fullName>FS_DoNotReleaseInfoto3rdPartyVendors__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Do Not Release Info to 3rd Party Vendors</label>
    <type>Checkbox</type>
</CustomField>