unpackaged/main/default/objects/Contact/fields/FS_DoNotSyncwithHL__c.field-meta.xml
<CustomField>
    <fullName>FS_DoNotSyncwithHL__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check if the contact should not be sync'd with HL</description>
    <inlineHelpText>Check if the contact should not be sync'd with HL</inlineHelpText>
    <label>Do Not Sync with HL</label>
    <type>Checkbox</type>
</CustomField>