unpackaged/main/default/objects/Contact/fields/FS_Doyouidentifyastransgender__c.field-meta.xml
<CustomField>
    <fullName>FS_Doyouidentifyastransgender__c</fullName>
    <label>Do you identify as transgender?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Decline to Answer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>