unpackaged/main/default/objects/Contact/fields/FS_DuesPaidBy__c.field-meta.xml
<CustomField>
    <fullName>FS_DuesPaidBy__c</fullName>
    <description>Field to identify the dues payer</description>
    <inlineHelpText>Select the dues payer type for the membership</inlineHelpText>
    <label>Dues Paid By</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Employer Only</fullName>
            </value>
            <value>
                <fullName>Member</fullName>
            </value>
            <value>
                <fullName>Collectively by Employer &amp; Member</fullName>
            </value>
            <value>
                <fullName>No Dues Paid</fullName>
            </value>
            <value>
                <fullName>Fully by Firm or School or Organization</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>