unpackaged/main/default/objects/Contact/fields/FS_Email_Opt_Out_standard_Salesforce__c.field-meta.xml
<CustomField>
    <fullName>FS_Email_Opt_Out_standard_Salesforce__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Email Opt Out (standard Salesforce)</label>
    <type>Checkbox</type>
</CustomField>