unpackaged/main/default/objects/Contact/fields/FS_EmergencyContactNameandRelationship__c.field-meta.xml
<CustomField>
    <fullName>FS_EmergencyContactNameandRelationship__c</fullName>
    <label>Emergency Contact Name and Relationship</label>
    <type>TextArea</type>
</CustomField>