unpackaged/main/default/objects/Contact/fields/FS_EmergencyContactPhone__c.field-meta.xml
<CustomField>
    <fullName>FS_EmergencyContactPhone__c</fullName>
    <inlineHelpText>Who may we call in case of emergency?</inlineHelpText>
    <label>Emergency Contact Phone</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>