unpackaged/main/default/objects/Contact/fields/FS_EmploymentStatus__c.field-meta.xml
<CustomField>
    <fullName>FS_EmploymentStatus__c</fullName>
    <label>Employment Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Full-Time Law Practice</fullName>
            </value>
            <value>
                <fullName>Part-Time Law Practice</fullName>
            </value>
            <value>
                <fullName>Non-Law Related</fullName>
            </value>
            <value>
                <fullName>Retired</fullName>
            </value>
            <value>
                <fullName>Unemployed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>