unpackaged/main/default/objects/Contact/fields/FS_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>FS_Expiration_Date__c</fullName>
    <label>Expiration Date</label>
    <type>Date</type>
</CustomField>