unpackaged/main/default/objects/Contact/fields/FS_ExpirationDate__c.field-meta.xml
<CustomField>
    <fullName>FS_ExpirationDate__c</fullName>
    <label>Expiration Date</label>
    <type>Date</type>
</CustomField>