unpackaged/main/default/objects/Contact/fields/FS_First_Admit_Date__c.field-meta.xml
<CustomField>
    <fullName>FS_First_Admit_Date__c</fullName>
    <formula>IF( 
AND( 
ISBLANK(FS_NYS_Admission_Date__c), 
ISBLANK(FS_Out_of_State_First_Admit_Date__c) 
), 
NULL, 
DATE(2998,1,1) - MAX( 
DATE(2998,1,1) - BLANKVALUE(FS_NYS_Admission_Date__c , DATE(2998,1,1)), 
DATE(2998,1,1) - BLANKVALUE(FS_Out_of_State_First_Admit_Date__c, DATE(2998,1,1)) 
) 
)</formula>
    <inlineHelpText>Oldest date between NYS Admit Date and Out of State Admit Date</inlineHelpText>
    <label>First Admission Date in any jurisdiction</label>
    <type>Date</type>
</CustomField>