unpackaged/main/default/objects/Contact/fields/FS_Full_Name__c.field-meta.xml
<CustomField>
    <fullName>FS_Full_Name__c</fullName>
    <description>Auto-Calculated Field to display full name including designation and salutation</description>
    <inlineHelpText>Auto-Calculated Field to display full name including designation and salutation</inlineHelpText>
    <label>Full Name (Formal)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>