unpackaged/main/default/objects/Contact/fields/FS_GDPR_OptIn__c.field-meta.xml
<CustomField>
    <fullName>FS_GDPR_OptIn__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Contact from GDPR country has expressly opted in to receive NYSBA communications (must be by express consent)</inlineHelpText>
    <label>GDPR Opt-In</label>
    <type>Checkbox</type>
</CustomField>